force-app/main/default/objects/Support_Queues__mdt/Support_Queues__mdt.object-meta.xml
<CustomObject>
    <description>used in Case Assignment and in Case Escalation process</description>
    <label>Support Queues</label>
    <pluralLabel>Support Queues</pluralLabel>
</CustomObject>