force-app/main/default/objects/Support_Queues__mdt/fields/Channel_Support__c.field-meta.xml
<CustomField>
    <fullName>Channel_Support__c</fullName>
    <label>Channel Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>