force-app/main/default/objects/Support_Queues__mdt/fields/Email_Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Email_Case_Origin__c</fullName>
    <label>Email Case Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>