force-app/main/default/objects/Support_Queues__mdt/fields/L2_Support__c.field-meta.xml
<CustomField>
    <fullName>L2_Support__c</fullName>
    <label>L2 Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>