force-app/main/default/objects/Support_Queues__mdt/fields/Support_Queue__c.field-meta.xml
<CustomField>
    <fullName>Support_Queue__c</fullName>
    <label>Support Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>